--- a/translations/en.json
+++ b/translations/en.json
@@ -47,8 +47,17 @@
   "random": "Random",
   "most_active": "Most active",
   "least_active": "Least active",
+  "general": "General",
+  "technology": "Technology",
+  "politics": "Politics",
+  "religion": "Religion",
+  "lgbtq": "LGBTQ+",
+  "art": "Art",
+  "literature": "Literature",
+  "music": "Music",
+  "hobbies": "Hobbies",
+  "gaming": "Gaming",
   "sports": "Sports",
-  "tech": "Tech",
   "rss_feeds": "RSS / Atom feeds for <1>All</1>, <2>Subscribed</2>, <3>Inbox</3>, <4>User</4>, and <5>Community</5>.",
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
