Adding total word.

--- a/translations/en.json
+++ b/translations/en.json
@@ -111,8 +111,8 @@
   "devs_funded": "{{formattedCount1}} / {{formattedCount2}} devs funded",
   "based_on_salary": "Based on a median European €{{formattedCount}} software developer salary from developersalary.com",
   "months_remaining": "{{formattedCount}} months remaining",
-  "total_comments": "{{formattedCount}} comments",
-  "total_users": "{{formattedCount}} users",
+  "total_comments": "{{formattedCount}} total comments",
+  "total_users": "{{formattedCount}} total users",
   "monthly_active_users": "{{formattedCount}} active users (users who have posted or commented in the last month)",
   "read_more": "Read more"
 }
