Adding servers, instances, instance disclaimer.

--- a/translations/en.json
+++ b/translations/en.json
@@ -98,9 +98,11 @@
   "contributers": "Contributors",
   "thanks_translators": "A special thanks to our translators: ",
   "thanks_coders": "A special thanks to our coders: ",
-  "instance_totals": "You can access all content in the lemmyverse from any server/instance. The lemmyverse currently has {{instances}} instances, and {{users}} monthly active users.",
-  "instance_comparison": "For a more detailed comparison of Lemmy instances, see",
-  "instance_browser": "After you create an account, you can find communities across all instances using",
+  "instance_disclaimer": "You can access all content in the lemmyverse from any server, so it doesn't matter which one you choose.",
+  "active_users": "Active Users",
+  "servers": "Servers",
+  "instance_comparison": "For a more detailed comparison of Lemmy servers, see",
+  "instance_browser": "After you create an account, you can find communities across all servers using",
   "news": "News",
   "releases": "Lemmy Releases",
   "add_weblate": "You can add translations via our <1>weblate</1>.",
