--- a/translations/en.json
+++ b/translations/en.json
@@ -62,7 +62,7 @@
   "rss_feeds": "RSS / Atom feeds for <1>All</1>, <2>Subscribed</2>, <3>Inbox</3>, <4>User</4>, and <5>Community</5>.",
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
-  "support_donate": "Support / Donate",
+  "donate": "Donate",
   "mobile_apps_for_ios_and_android": "Mobile apps for iOS and Android.",
   "mobile_apps_for_android": "Mobile apps for Android.",
   "mobile_apps_for_ios": "Mobile apps for iOS.",
@@ -81,7 +81,6 @@
   "support_on_opencollective": "Support on <1>OpenCollective</1>",
   "apps": "Apps",
   "sponsors": "Sponsors",
-  "support": "Support",
   "donate": "Donate",
   "docs": "Docs",
   "code_of_conduct": "Code of Conduct",
@@ -89,13 +88,12 @@
   "join_title": "Lemmy - Browse servers",
   "lemmy_servers": "Lemmy <1>Servers</1>",
   "browse_instance": "Browse",
-  "support_title": "Lemmy - Support",
+  "donate_title": "Lemmy - Donate",
   "donate_to_lemmy": "Donate to Lemmy",
   "gold_pressed_latinum_sponsors_desc": "Gold Pressed Latinum Sponsors are those that pledged $500 monthly or more to Lemmy.",
   "gold_sponsors_desc": "Gold Sponsors are those that pledged $100 monthly to Lemmy.",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 monthly to Lemmy.",
   "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 monthly to Lemmy.",
-  "support_lemmy": "Support <1>Lemmy</1>",
   "contributers": "Contributors",
   "thanks_translators": "A special thanks to our translators: ",
   "thanks_coders": "A special thanks to our coders: ",
