Fix contributors key. Fixes #13

--- a/translations/en.json
+++ b/translations/en.json
@@ -94,7 +94,7 @@
   "gold_sponsors_desc": "Gold Sponsors are those that pledged $100 monthly to Lemmy.",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 monthly to Lemmy.",
   "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 monthly to Lemmy.",
-  "contributers": "Contributors",
+  "contributors": "Contributors",
   "thanks_translators": "A special thanks to our translators: ",
   "thanks_coders": "A special thanks to our coders: ",
   "instance_disclaimer": "You can access all content in the lemmyverse from any server, so it doesn't matter which one you choose.",
