--- a/translations/nl.json
+++ b/translations/nl.json
@@ -414,7 +414,7 @@
     "column_category": "Categorie",
     "column_emoji": "Emoji",
     "custom_emojis": "Aangepaste emoji's",
-    "legal_information": "Juridisch",
+    "legal_information": "Voorwaarden",
     "federation_enabled": "Federatie ingeschakeld",
     "rate_limit": "Limieten",
     "federation_debug": "Federatie-foutopsporings­modus",
