Updating donate desc.

--- a/translations/en.json
+++ b/translations/en.json
@@ -75,7 +75,7 @@
   "contact_title": "Lemmy - Contact",
   "contact": "Contact",
   "contact_us": "Contact <1>Us</1>",
-  "donate_desc": "Lemmy is free, open-source software, meaning no advertising, monetizing, or venture capital, ever. <1>Your donations</1> directly support full-time development of the project.",
+  "donate_desc": "Lemmy is free, open-source software, meaning no advertising, monetizing, or venture capital, ever. <1>Your donations</1> will help grow the Lemmy developer non-profit, and ensure that we can keep adding new features and improving Lemmy.",
   "support_on_liberapay": "Support on <1>Liberapay</1>",
   "support_on_patreon": "Support on <1>Patreon</1>",
   "support_on_opencollective": "Support on <1>OpenCollective</1>",
