--- a/translations/en.json
+++ b/translations/en.json
@@ -119,5 +119,6 @@
   "registrations_open": "Registrations Open",
   "registrations_closed": "Registrations Closed",
   "requires_application": "Requires Registration Application",
+  "sign_up": "Sign up",
   "read_more": "Read more"
 }
