Adding platform strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -39,6 +39,11 @@
   "i18n_support": "<1>i18n / internationalization support for > 30 languages.</1>",
   "all_languages": "All languages",
   "all_topics": "All topics",
+  "all_platforms": "All platforms",
+  "ios": "iOS",
+  "android": "Android",
+  "web": "Web",
+  "cli": "CLI",
   "topic": "Topic",
   "interests": "Interests",
   "languages": "Languages",
