Add translations for content actions update

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,9 @@
 {
   "post": "post",
   "remove_post": "Remove Post",
+  "removed_post": "Removed post",
+  "restore_post": "Restore post",
+  "restored_post": "Restored post",
   "no_posts": "No Posts.",
   "create_a_post": "Create a post",
   "create_post": "Create Post",
@@ -16,8 +19,11 @@
   "number_of_comments": "{{formattedCount}} Comment",
   "number_of_comments_plural": "{{formattedCount}} Comments",
   "remove_comment": "Remove Comment",
+  "removed_comment": "Removed comment",
   "remove_content": "Remove Content",
-  "remove_content_more": "Remove Posts, Comments, and Communities",
+  "restore_comment": "Restore comment",
+  "restored_comment": "Restored comment",
+  "recipientremove_content_more": "Remove Posts, Comments, and Communities",
   "comment_here": "Type here to comment...",
   "communities": "Communities",
   "users": "Users",
@@ -39,8 +45,8 @@
   "send_message": "Send Message",
   "message": "Message",
   "edit": "Edit",
-  "reply": "reply",
-  "more": "more",
+  "reply": "Reply",
+  "more": "More",
   "cancel": "Cancel",
   "preview": "Preview",
   "upload_image": "upload image",
@@ -64,7 +70,7 @@
   "sorting_help": "sorting help",
   "view_source": "view source",
   "view_all_comments": "View all comments",
-  "unlock": "unlock",
+  "unlock": "Unlock",
   "lock": "Lock",
   "sticky": "sticky",
   "unsticky": "unsticky",
@@ -81,8 +87,10 @@
   "list": "list",
   "mod": "mod",
   "mods": "mods",
-  "distinguish": "speak as moderator",
-  "undistinguish": "speak as user",
+  "distinguish": "Speak as moderator",
+  "undistinguish": "Speak as user",
+  "distinguished_comment": "Distinguished comment",
+  "undistinguished_comment": "Undistinguished comment",
   "moderates": "Moderates",
   "settings": "Settings",
   "admin_settings": "Admin Settings",
@@ -93,28 +101,48 @@
   "profile_not_logged_in_alert": "You are not logged in. If you use a Fediverse account that is able to follow users, you can follow this user.",
   "community_not_logged_in_alert": "You are not logged in. However you can subscribe from another Fediverse account, for example Lemmy or Mastodon. To do this, paste the following into the search field of your instance: <1>!{{community}}@{{instance}}</1>",
   "site_config": "Site Configuration",
-  "remove_as_mod": "remove as mod",
-  "appoint_as_mod": "appoint as mod",
-  "leave_mod_team": "leave mod team",
+  "remove_as_mod": "Remove as mod",
+  "remove_as_mod_are_you_sure": "Are you sure you want to remove {{user}} as a moderator for {{community}}?",
+  "removed_moderator": "Removed moderator",
+  "removing_mod": "Removing mod",
+  "appoint_as_mod": "Appoint as moderator",
+  "appointing_mod": "Appointing moderator",
+  "appointed_moderator": "Appointed moderator",
+  "appoint_as_mod_are_you_sure": "Are you sure you want to appoint {{user}} as a moderator for {{community}}?",
+  "leave_mod_team": "Leave mod team",
   "modlog": "Modlog",
   "filter_by_action": "Filter by action",
   "filter_by_mod": "Filter by mod",
   "filter_by_user": "Filter by user",
   "admin": "admin",
   "admins": "admins",
-  "remove_as_admin": "remove as admin",
-  "appoint_as_admin": "appoint as admin",
+  "remove_as_admin": "Remove as admin",
+  "remove_as_admin_are_you_sure": "Are you sure you want to remove {{user}} from the {{instance}} admin team?",
+  "removing_admin": "Removing admin",
+  "removed_admin": "Removed admin",
+  "appoint_as_admin": "Appoint as admin",
+  "appointing_admin": "Appointing admin",
+  "appointed_admin": "Appointed admin",
+  "appoint_as_admin_are_you_sure": "Are you sure you want to appoint {{user}} as an admin of {{instance}}?",
   "only_admins_can_create_communities": "Only admins can create communities",
   "only_mods_can_post_in_community": "Only moderators can post to this community",
-  "remove": "remove",
-  "removed": "removed by mod",
+  "remove": "Remove",
+  "removing": "Removing",
+  "removed": "Removed by mod",
   "locked": "locked",
+  "locked_post": "Locked post",
+  "unlocked_post": "Unlocked post",
   "loading": "Loading",
   "stickied": "stickied",
   "reason": "Reason",
   "mark_as_read": "mark as read",
   "mark_as_unread": "mark as unread",
   "delete": "Delete",
+  "deleted_post": "Deleted post",
+  "deleted_comment": "Deleted comment",
+  "undelete": "Undelete",
+  "undeleted_post": "Undeleted post",
+  "undeleted_comment": "Undeleted comment",
   "deleted": "deleted by creator",
   "delete_account": "Delete Account",
   "delete_account_confirm": "Warning: this will permanently delete all of your data from this instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
@@ -122,24 +150,34 @@
   "failed_to_delete_picture": "Failed to delete picture: {{filename}}",
   "picture_deleted": "Picture deleted: {{filename}}",
   "pictures_uploaded_progess": "{{uploaded}}/{{total}} pictures uploaded",
-  "restore": "restore",
-  "ban": "ban",
-  "ban_from_site": "ban from site",
-  "ban_from_community": "ban from community",
-  "unban": "unban",
-  "unban_from_site": "unban from site",
-  "banned": "banned",
+  "restore": "Restore",
+  "restoring": "Restoring",
+  "permanently_ban": "Permanently ban",
+  "ban": "Ban",
+  "banning": "Banning",
+  "ban_from_site": "Ban from site",
+  "ban_from_community": "Ban from community",
+  "unban": "Unban",
+  "unbanning": "Unbanning",
+  "unban_from_site": "Unban from site",
+  "banned": "Banned",
   "banned_users": "Banned Users",
-  "purge": "purge",
-  "purge_post": "purge post",
-  "purge_comment": "purge comment",
-  "purge_community": "purge community",
-  "purge_user": "purge user",
+  "banned_from_community": "{{user}} banned from {{community}}",
+  "unbanned_from_community": "{{user}} unbanned from {{community}}",
+  "banned_from_site": "{{user}} banned",
+  "unbanned_from_site": "{{user}} banned",
+  "purge": "Purge",
+  "purging": "Purging",
+  "purge_post": "Purge post",
+  "purge_comment": "Purge comment",
+  "purge_community": "Purge community",
+  "purge_user": "Purge user",
+  "purge_user_with_name": "Purge {{user}}",
   "purge_warning": "Warning: Purging will delete this item, and all its children from the database. You will not be able to recover the data. Use with extreme caution.",
   "modlog_content_warning": "<1>CONTENT WARNING</1>: Some deleted posts may contain disturbing or adult material. Proceed with caution.",
   "purge_success": "The item has been successfully purged.",
-  "save": "save",
-  "unsave": "unsave",
+  "save": "Save",
+  "unsave": "Unsave",
   "create": "create",
   "creator": "creator",
   "username": "Username",
@@ -313,11 +351,14 @@
   "by": "by",
   "to": "to",
   "from": "from",
-  "transfer_community": "transfer community",
-  "transfer_site": "transfer site",
+  "transfer_community": "Transfer community",
+  "transferring_community": "Transferring community",
+  "transfer_community_are_you_sure": "Are you sure you want to transfer {{community}} to {{user}}?",
+  "transfer_site": "Transfer site",
+  "transfered_community": "Community transferred",
   "are_you_sure": "are you sure?",
-  "yes": "yes",
-  "no": "no",
+  "yes": "Yes",
+  "no": "No",
   "not_logged_in": "Not logged in.",
   "bio_length_overflow": "User bio cannot exceed 300 characters.",
   "logged_in": "Logged in.",
@@ -418,9 +459,13 @@
   "unresolved_by": "Unresolved by <1></1>",
   "show_report_dialog": "Show Report Dialog",
   "create_report": "Create Report",
+  "creating_report": "Creating Report",
   "resolve_report": "Resolve Report",
   "unresolve_report": "Unresolve Report",
   "report_created": "Report Created.",
+  "report_post": "Report post",
+  "report_comment": "Report comment",
+  "report_message": "Report message",
   "fill_out_application": "To join this server, you need to fill out this application, and wait to be accepted.",
   "answer": "Answer",
   "verify_email": "Verify Email",
@@ -484,6 +529,8 @@
   "unfeature_from_local": "Unfeature in Local",
   "feature_in_community": "Feature in Community",
   "unfeature_from_community": "Unfeature in Community",
+  "featured_post": "Featured post",
+  "unfeatured_post": "Unfeatured post",
   "deleted_emoji": "Deleted Emoji",
   "saved_emoji": "Saved Emoji",
   "custom_emoji_save_validation": "All fields must be filled in and shortcode can't be duplicated.",
@@ -542,5 +589,6 @@
   "import_export_rate_limit_error": "Please wait a few minutes before trying to import or export settings again",
   "export_error": "Error exporting settings",
   "import_error": "Error importing settings",
-  "import_success": "Settings successfully imported!"
+  "import_success": "Settings successfully imported!",
+  "confirmation_required": "Confirmation Required"
 }
