--- a/translations/en.json
+++ b/translations/en.json
@@ -23,7 +23,7 @@
   "remove_content": "Remove Content",
   "restore_comment": "Restore comment",
   "restored_comment": "Restored comment",
-  "recipientremove_content_more": "Remove Posts, Comments, and Communities",
+  "remove_content_more": "Remove Posts, Comments, and Communities",
   "comment_here": "Type here to comment...",
   "communities": "Communities",
   "users": "Users",
@@ -103,11 +103,11 @@
   "site_config": "Site Configuration",
   "remove_as_mod": "Remove as mod",
   "remove_as_mod_are_you_sure": "Are you sure you want to remove {{user}} as a moderator for {{community}}?",
-  "removed_moderator": "Removed moderator",
+  "removed_mod": "Removed moderator",
   "removing_mod": "Removing mod",
   "appoint_as_mod": "Appoint as moderator",
   "appointing_mod": "Appointing moderator",
-  "appointed_moderator": "Appointed moderator",
+  "appointed_mod": "Appointed moderator",
   "appoint_as_mod_are_you_sure": "Are you sure you want to appoint {{user}} as a moderator for {{community}}?",
   "leave_mod_team": "Leave mod team",
   "modlog": "Modlog",
@@ -129,7 +129,8 @@
   "remove": "Remove",
   "removing": "Removing",
   "removed": "Removed by mod",
-  "locked": "locked",
+  "locked": "Locked",
+  "unlocked": "Unlocked",
   "locked_post": "Locked post",
   "unlocked_post": "Unlocked post",
   "loading": "Loading",
@@ -154,18 +155,23 @@
   "restoring": "Restoring",
   "permanently_ban": "Permanently ban",
   "ban": "Ban",
-  "banning": "Banning",
+  "ban_with_name": "Ban {{user}}",
+  "banning": "Banning {{user}}",
   "ban_from_site": "Ban from site",
   "ban_from_community": "Ban from community",
+  "ban_from_community_with_name": "Ban {{user}} from {{community}}",
   "unban": "Unban",
-  "unbanning": "Unbanning",
+  "unban_with_name": "Unban {{user}}",
+  "unbanning": "Unbanning {{user}}",
   "unban_from_site": "Unban from site",
+  "unban_from_community": "Unban from community",
+  "unban_from_community_with_name": "Unban {{user}} from {{community}}",
   "banned": "Banned",
   "banned_users": "Banned Users",
-  "banned_from_community": "{{user}} banned from {{community}}",
-  "unbanned_from_community": "{{user}} unbanned from {{community}}",
-  "banned_from_site": "{{user}} banned",
-  "unbanned_from_site": "{{user}} banned",
+  "banned_from_community": "Banned {{user}} from {{community}}",
+  "unbanned_from_community": "Unbanned {{user}} from {{community}}",
+  "banned_from_site": "Banned {{user}}",
+  "unbanned_from_site": "Unbanned {{user}}",
   "purge": "Purge",
   "purging": "Purging",
   "purge_post": "Purge post",
