Add message for delete account content (#118)
* Add message for delete account content

* adjust confirm message

--- a/translations/en.json
+++ b/translations/en.json
@@ -147,7 +147,8 @@
   "undeleted_comment": "Undeleted comment",
   "deleted": "deleted by creator",
   "delete_account": "Delete Account",
-  "delete_account_confirm": "Warning: this will permanently delete all of your data from this instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
+  "delete_account_content": "Delete all posts, comments and uploaded images",
+  "delete_account_confirm": "Warning: this will permanently delete your account. The deletion may not always federate to other instances. Enter your password to confirm.",
   "click_to_delete_picture": "Click to delete picture: {{filename}}",
   "failed_to_delete_picture": "Failed to delete picture: {{filename}}",
   "picture_deleted": "Picture deleted: {{filename}}",
