--- a/translations/en.json
+++ b/translations/en.json
@@ -611,5 +611,6 @@
   "local_only": "Local Only",
   "local_only_blurb": "Only users on this instance can interact with this community.",
   "public": "Public",
-  "public_blurb": "This community can be federated to other instances and be posted/commented in by their users."
+  "public_blurb": "This community can be federated to other instances and be posted/commented in by their users.",
+  "banned_from_community_blurb": "<1>Banned:</1> You cannot post, comment, or vote in this community. However, you are still free to browse."
 }
