Add translations for hid epost UI

--- a/translations/en.json
+++ b/translations/en.json
@@ -614,5 +614,10 @@
   "public": "Public",
   "public_blurb": "This community can be federated to other instances and be posted/commented in by their users.",
   "banned_from_community_blurb": "<1>Banned:</1> You cannot post, comment, or vote in this community. However, you are still free to browse.",
-  "private_message_form_user_matrix_blurb": "This user already has a matrix account you can message at <1>{{matrix_id}}</1>."
+  "private_message_form_user_matrix_blurb": "This user already has a matrix account you can message at <1>{{matrix_id}}</1>.",
+  "hide_post": "Hide Post",
+  "unhide_post": "Unhide Post",
+  "show_hidden_posts": "Show hidden posts",
+  "post_hidden": "Post hidden",
+  "post_unhidden": "Post unhidden"
 }
