--- a/translations/en.json
+++ b/translations/en.json
@@ -64,6 +64,9 @@
   "upload_too_large": "Uploaded image is too large!",
   "show_avatars": "Show Avatars",
   "show_scores": "Show Scores",
+  "show_upvotes": "Show Upvotes",
+  "show_downvotes": "Show Downvotes",
+  "show_upvote_percentage": "Show Upvote %",
   "bot_account": "Bot Account",
   "show_bot_accounts": "Show Bot Accounts",
   "show_read_posts": "Show Read Posts",
@@ -333,6 +336,7 @@
   "downvote": "Downvote",
   "number_of_downvotes": "{{formattedCount}} Downvote",
   "number_of_downvotes_plural": "{{formattedCount}} Downvotes",
+  "upvote_percentage": "{{formattedCount}}% upvoted",
   "view_votes": "View Votes",
   "votes": "Votes",
   "registration_mode": "Registration Mode",
