--- a/translations/en.json
+++ b/translations/en.json
@@ -634,5 +634,7 @@
   "continue": "Continue",
   "go_back": "Go Back",
   "content_warning_setting_blurb": "Setting a content warning will display a prompt with the content warning asking the user for their consent to continue.",
-  "moderation_history": "Moderation History"
+  "moderation_history": "Moderation History",
+  "language_not_allowed": "Language not allowed",
+  "edited_post": "Edited post"
 }
