--- a/translations/en.json
+++ b/translations/en.json
@@ -629,7 +629,7 @@
   "post_hidden": "Post hidden",
   "post_unhidden": "Post unhidden",
   "block_urls": "Block URLs",
-  "block_urls_placeholder": "Put your blocked URLs here, one URL per line.",
+  "block_urls_placeholder": "Put your blocked URLs here, one URL per line. Regex strings work also, IE *.example.com",
   "content_warning": "Content Warning",
   "sending_back_message": "Alright 👍. Sending you back in {{seconds}}.",
   "continue": "Continue",
