--- a/translations/zh.json
+++ b/translations/zh.json
@@ -153,7 +153,7 @@
     "view": "查看",
     "logout": "登出",
     "login_sign_up": "登录/注册",
-    "login": "登陆",
+    "login": "登录",
     "sign_up": "注册",
     "notifications_error": "你的浏览器不支持桌面通知，尝试 Firefox 或 Chrome。",
     "unread_messages": "{{formattedCount}} 未读消息",
@@ -216,7 +216,7 @@
     "not_logged_in": "未登录。",
     "bio_length_overflow": "自我介绍不能超过300个字符。",
     "logged_in": "已登录。",
-    "must_login": "您必须<1>登陆或注册</1>才能评论。",
+    "must_login": "您必须<1>登录或注册</1>才能评论。",
     "site_saved": "网站已保存。",
     "community_ban": "你已被此社群拉黑。",
     "site_ban": "你已被本站拉黑",
