--- a/translations/en.json
+++ b/translations/en.json
@@ -635,7 +635,9 @@
   "continue": "Continue",
   "go_back": "Go Back",
   "content_warning_setting_blurb": "Setting a content warning will display a prompt with the content warning asking the user for their consent to continue.",
-  "moderation_history": "Moderation History",
+  "user_moderation_history": "{{user}} Moderation History",
+  "comment_moderation_history": "Comment Moderation History",
+  "post_moderation_history": "Post Moderation History",
   "language_not_allowed": "Language not allowed",
   "edited_post": "Edited post",
   "leave_admin_team_confirmation": "Are you sure you want to leave the admin team?",
