--- a/translations/en.json
+++ b/translations/en.json
@@ -642,5 +642,5 @@
   "edited_post": "Edited post",
   "leave_admin_team_confirmation": "Are you sure you want to leave the admin team?",
   "leaving_admin_team": "Leaving admin team",
-  "torrent_help": "Lemmy uses a technology called BitTorrent to view or stream media. <1>Click here</1> to learn how to use it."
+  "torrent_help": "Lemmy can use a technology called BitTorrent to view or stream media. <1>Click here</1> to learn how."
 }
