--- a/translations/en.json
+++ b/translations/en.json
@@ -641,5 +641,6 @@
   "language_not_allowed": "Language not allowed",
   "edited_post": "Edited post",
   "leave_admin_team_confirmation": "Are you sure you want to leave the admin team?",
-  "leaving_admin_team": "Leaving admin team"
+  "leaving_admin_team": "Leaving admin team",
+  "torrent_help": "Lemmy can use a technology called BitTorrent to view or stream media. <1>Click here</1> to learn how."
 }
