--- a/translations/en.json
+++ b/translations/en.json
@@ -645,5 +645,6 @@
   "torrent_help": "Lemmy can use a technology called BitTorrent to view or stream media. <1>Click here</1> to learn how.",
   "registration_for_user": "Registration for {{name}}",
   "loading_registration": "Loading registration",
-  "fetch_registration_error": "Could not fetch registration application"
+  "fetch_registration_error": "Could not fetch registration application",
+  "view-registration": "View registration"
 }
