--- a/translations/en.json
+++ b/translations/en.json
@@ -381,7 +381,7 @@
   "not_logged_in": "Not logged in.",
   "bio_length_overflow": "User bio cannot exceed 300 characters.",
   "logged_in": "Logged in.",
-  "must_login": "You must <1>log in or register</1> to comment.",
+  "must_login": "You must <1>log in</1> or <2>register</2> to comment.",
   "site_saved": "Site Saved.",
   "community_ban": "You have been banned from this community.",
   "site_ban": "You have been banned from the site",
