Change "sign up" to "explore"

--- a/translations/en.json
+++ b/translations/en.json
@@ -120,6 +120,6 @@
   "registrations_open": "Registrations Open",
   "registrations_closed": "Registrations Closed",
   "requires_application": "Requires Registration Application",
-  "sign_up": "Sign up",
-  "read_more": "Read more"
+  "read_more": "Read more",
+  "explore": "Explore"
 }
