--- a/translations/ru.json
+++ b/translations/ru.json
@@ -137,5 +137,5 @@
     "closed_source_warning": "Предупреждение: это приложение с закрытым исходным кодом и может собирать ваши данные. Используйте на свой страх и риск.",
     "registrations_open": "Регистрация открыта",
     "registrations_closed": "Регистрация закрыта",
-    "requires_application": "Требуется заявка на регистрацию",
+    "requires_application": "Требуется заявка на регистрацию"
 }
