--- a/translations/uk.json
+++ b/translations/uk.json
@@ -135,5 +135,5 @@
     "closed_source_warning": "Попередження: цей застосунок має закритий вихідний код і може збирати ваші дані. Використовуйте на свій страх і ризик.",
     "registrations_open": "Реєстрацію відкрито",
     "registrations_closed": "Реєстрацію закрито",
-    "requires_application": "Потрібна заявка на реєстрацію",
+    "requires_application": "Потрібна заявка на реєстрацію"
 }
