Adding publish time strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -643,5 +643,7 @@
   "registration_for_user": "Registration for {{name}}",
   "loading_registration": "Loading registration",
   "fetch_registration_error": "Could not fetch registration application",
-  "view_registration": "View registration"
+  "view_registration": "View registration",
+  "publish_in_time": "Publish {{time}}",
+  "scheduled_publish_time": "Scheduled Publish Time"
 }
