Added translations for the SSO Support

--- a/translations/en.json
+++ b/translations/en.json
@@ -46,6 +46,7 @@
   "send_message": "Send Message",
   "message": "Message",
   "edit": "Edit",
+  "add": "Add",
   "reply": "Reply",
   "more": "More",
   "cancel": "Cancel",
@@ -429,6 +430,7 @@
   "invalid_username": "Invalid username.",
   "admin_already_created": "Sorry, there's already an admin.",
   "user_already_exists": "User already exists.",
+  "username_already_exists": "Username already exists.",
   "email_already_exists": "Email already exists.",
   "couldnt_update_user": "Couldn't update user.",
   "system_err_login": "System error. Try logging out and back in.",
@@ -596,6 +598,7 @@
   "remote_follow": "Remote Follow",
   "remote_follow_modal_title": "Subscribe from Remote Instance",
   "blur_nsfw": "Blur NSFW content",
+  "auto_expand": "Auto expand media",
   "remote_follow_invalid_instance": "{{instance}} is not a vaild domain.",
   "remote_follow_local_instance": "Cannot fetch local instance for remote follow",
   "import_export_section_title": "Import/Export Settings",
@@ -611,6 +614,36 @@
   "import_success": "Settings successfully imported!",
   "confirmation_required": "Confirmation Required",
   "submit": "Submit",
+  "authentication": "Authentication",
+  "oauth_config": "OAuth Configuration",
+  "oauth_providers": "Providers",
+  "add_oauth_provider": "Add provider",
+  "oauth_provider_presets": "Preset Providers",
+  "no_oauth_providers_blurb": "No providers",
+  "delete_oauth_provider_are_you_sure": "Are you sure you want to delete this provider?",
+  "deleting_oauth_provider": "Deleting provider...",
+  "oauth_display_name": "Display Name",
+  "oauth_issuer": "Issuer",
+  "oauth_authorization_endpoint": "Authorization Endpoint",
+  "oauth_token_endpoint": "Token Endpoint",
+  "oauth_userinfo_endpoint": "User Info Endpoint",
+  "oauth_id_claim": "ID Claim",
+  "oauth_client_id": "Client ID",
+  "oauth_client_secret": "Client Secret",
+  "oauth_scopes": "OAuth Scopes",
+  "oauth_auto_verify_email": "Auto-Verify Email",
+  "oauth_account_linking_enabled": "Account Linking Enabled",
+  "oauth_enabled": "Enabled",
+  "couldnt_edit_oauth_provider": "Couldn't edit OAuth provider.",
+  "couldnt_delete_oauth_provider": "Couldn't delete OAuth provider.",
+  "couldnt_create_oauth_provider": "Couldn't create OAuth provider.",
+  "or": "Or",
+  "available_oauth_providers": "Login with",
+  "oauth_login_with_provider": "Login with SSO Provider",
+  "oauth_authorization_invalid": "Login Authorization Failed.",
+  "oauth_login_failed": "Login Failed.",
+  "oauth_registration_closed": "Registration closed.",
+  "oauth_registration": "OAuth Registration",
   "community_locked_message": "<1>Community locked:</1> only moderators can create posts. You can still comment on posts.",
   "community_locked": "Community locked",
   "community_visibility": "Visibility",
