SSO translation improvements

--- a/translations/en.json
+++ b/translations/en.json
@@ -499,7 +499,7 @@
   "application_email_admins": "Email admins on receiving new applications",
   "reports_email_admins": "Email admins on receiving new reports",
   "private_instance": "Private Instance",
-  "registration_application_is_pending": "Registration approval pending.",
+  "registration_application_pending": "Registration approval pending.",
   "registration_denied": "Registration application denied.",
   "email_not_verified": "Email not verified.",
   "email_verified": "Your email has been verified.",
@@ -630,10 +630,11 @@
   "oauth_id_claim": "ID Claim",
   "oauth_client_id": "Client ID",
   "oauth_client_secret": "Client Secret",
+  "cannot_view_secret_after_saving": "Cannot view secret after saving",
   "oauth_scopes": "OAuth Scopes",
   "oauth_auto_verify_email": "Auto-Verify Email",
-  "oauth_account_linking_enabled": "Account Linking Enabled",
-  "oauth_enabled": "Enabled",
+  "oauth_account_linking_enabled": "Enable Account Linking",
+  "oauth_enabled": "Enable Provider",
   "couldnt_edit_oauth_provider": "Couldn't edit OAuth provider.",
   "couldnt_delete_oauth_provider": "Couldn't delete OAuth provider.",
   "couldnt_create_oauth_provider": "Couldn't create OAuth provider.",
@@ -643,7 +644,7 @@
   "oauth_authorization_invalid": "Login Authorization Failed.",
   "oauth_login_failed": "Login Failed.",
   "oauth_registration_closed": "Registration closed.",
-  "oauth_registration": "OAuth Registration",
+  "oauth_registration": "Allow Registration via OAuth",
   "community_locked_message": "<1>Community locked:</1> only moderators can create posts. You can still comment on posts.",
   "community_locked": "Community locked",
   "community_visibility": "Visibility",
