Remove trailing comma for Romanian

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -530,5 +530,5 @@
     "could_not_fetch_community": "Nu s-a putut colecta {{community}}",
     "remote_follow": "Urmărire la distanță",
     "remote_follow_modal_title": "Abonare la instanță la distanță",
-    "blur_nsfw": "Ascunde conținut NSFW",
+    "blur_nsfw": "Ascunde conținut NSFW"
 }
