Remove trailing comma from Norwegian

--- a/translations/nn.json
+++ b/translations/nn.json
@@ -511,5 +511,5 @@
     "could_not_fetch_community": "Klarte ikkje henta {{community}}",
     "remote_follow": "Følg eksternt",
     "remote_follow_modal_title": "Abonner frå ekstern instans",
-    "blur_nsfw": "Vis NSFW-bilete som uklare",
+    "blur_nsfw": "Vis NSFW-bilete som uklare"
 }
