Update en.json - rename block to mute

--- a/translations/en.json
+++ b/translations/en.json
@@ -105,7 +105,7 @@
   "left_admin_team": "You have left the admin team",
   "profile": "Profile",
   "profile_not_logged_in_alert": "You are not logged in. If you use a Fediverse account that is able to follow users, you can follow this user.",
-  "community_not_logged_in_alert": "You are not logged in. However you can subscribe from another Fediverse account, for example Lemmy or Mastodon. To do this, paste the following into the search field of your instance: <1>!{{community}}@{{instance}}</1>",
+  "community_not_logged_in_alert": "You are not logged in. However, you can subscribe from another Fediverse account, for example, Lemmy or Mastodon. To do this, paste the following into the search field of your instance: <1>!{{community}}@{{instance}}</1>",
   "site_config": "Site Configuration",
   "remove_as_mod": "Remove as mod",
   "remove_as_mod_are_you_sure": "Are you sure you want to remove {{user}} as a moderator for {{community}}?",
@@ -452,19 +452,19 @@
   "instances": "Instances",
   "linked_instances": "Linked Instances",
   "allowed_instances": "Allowed Instances",
-  "blocked_instances": "Blocked Instances",
-  "block_instance": "Block instance",
-  "unblock_instance": "Unblock instance",
-  "blocked_users": "Blocked Users",
-  "block_user": "Block user",
-  "blocked_communities": "Blocked Communities",
-  "blocked": "Blocked",
-  "unblocked": "Unblocked",
-  "block_community": "Block community",
-  "unblock_user": "Unblock user",
-  "unblock_community": "Unblock community",
-  "blocks": "Blocks",
-  "person_block": "This user has blocked you.",
+  "blocked_instances": "Muted Instances",
+  "block_instance": "Mute instance",
+  "unblock_instance": "Unmute instance",
+  "blocked_users": "Muted Users",
+  "block_user": "Mute user",
+  "blocked_communities": "Muted Communities",
+  "blocked": "Muted",
+  "unblocked": "Unmuted",
+  "block_community": "Mute community",
+  "unblock_user": "Unmute user",
+  "unblock_community": "Unmute community",
+  "blocks": "Mutes",
+  "person_block": "This user has muted you.",
   "none_found": "None found.",
   "report_reason_required": "Report reason required.",
   "report_too_long": "Report too long.",
